fix overflow

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -4,8 +4,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
-  position: fixed;
-  width: 95%;
+  width: 100%;
 }
 
 .hamburger-btn {
@@ -20,7 +19,7 @@ body {
 
 .hori_line {
   list-style: none;
-}
+}*
 
 .HEAD {
   display: flex;
@@ -101,7 +100,7 @@ body {
 
 .exp .sub_tabs {
   display: flex;
-  gap: 25px;
+  gap: 12px;
   margin-left: -35px;
 }
 
@@ -215,6 +214,7 @@ body {
 hr {
   margin-left: -23px;
   margin-right: 20px;
+  width: 75%;
 }
 
 .my_skills {
@@ -297,6 +297,10 @@ form {
   color: #4e5cd4;
 }
 
+.my_desk_lan .lan_tag{
+  padding: 4px, 12px, 4px, 12px;
+}
+
 .desktop_title {
   display: none;
 }
@@ -335,6 +339,12 @@ form {
     list-style: none;
     margin-top: -4px;
     color: #344563;
+    margin-right: 120px;
+    margin-left: auto;
+  }
+
+  .header-container {
+    width: 100%;
   }
 
   .headline {
@@ -399,8 +409,13 @@ form {
   .card {
     flex-direction: row;
     border: 1px solid #dfe1e6;
-    gap: 46px;
+    gap: 3rem;
     margin: 142px;
+    width: 80%;
+  }
+
+  .image_desk {
+    width: 544px;
   }
 
   .reverse {
@@ -409,7 +424,12 @@ form {
 
   .card_Desktop {
     display: block;
+    width: 40%;
     padding: 24px;
+  }
+
+  .card_Desktop img {
+    width: 350px;
   }
 
   .img {
@@ -417,8 +437,12 @@ form {
   }
 
   .card_info {
-    width: auto;
+    width: 60%;
     margin: 40px;
+  }
+
+  body {
+    overflow-x: hidden;
   }
 
   .lan_tag {
@@ -463,7 +487,7 @@ form {
   }
 
   .skill_header {
-    gap: 420px;
+    gap: 310px;
   }
 
   .langs {
@@ -482,7 +506,7 @@ form {
   }
 
   .my_skills .skill_header {
-    gap: 510px;
+    gap: 400px;
   }
 
   .myself_title {
@@ -521,10 +545,11 @@ form {
     background-size: 75%;
     border-top-left-radius: 100px;
     text-align: center;
+    height: auto;
   }
 
   .lan_header {
-    gap: 430px;
+    gap: 65%;
   }
 
   .Resume_btn {
